--- a/notes/main.tex
+++ b/notes/main.tex
@@ -119,8 +119,19 @@
 \maketitle
 
 \begin{abstract}
-	Machine learning is important for obvious reasons, but physicist often only know the heuristics reasons for certain ML design decisions.but the exact implementation
+	Machine learning is important for obvious reasons, but physicist often only know the heuristics reasons for certain ML design decisions. I hope these recitations aid in sharpening your understanding.
 \end{abstract}
+\paragraph{Resources:}
+
+Statistical mechanics plays a huge role in inference algorithms. Montanari was one of the first people to make the connection, leading to an entire new sub-field. Methods for calculating partition functions has lead to advancements in algorithms for statistical inference.
+\begin{itemize}
+	\item M\'ezard, Montanari. Information, Physics, and Computation.
+	\item Krzakala, Zdeborov\'a. Statistical Physics Methods in Optimization and Machine Learning
+\end{itemize}
+High energy / field theorist are extremely skilled at computing expectation values, one can use this study data distributions deep in neural networks.
+\begin{itemize}
+	\item Roberts, Yaida. The Principles of Deep Learning Theory. https://arxiv.org/abs/2106.10165.
+\end{itemize}
 
 \tableofcontents
 
@@ -158,6 +169,8 @@
 \input{variational.tex}
 \input{generative.tex}
 
+\newpage
+\input{unsupervised.tex}
 
 
 
