--- a/notes/linear.tex
+++ b/notes/linear.tex
@@ -203,7 +203,7 @@ Note due to my notation, the $\frac{\partial }{\partial \mathbf x}$ terms have a
 
 \noindent
 \begin{sidework}
-	\emph{Proof:} Here's a constructive proof. Say you want to solve for $x$
+	\emph{Proof:} Here's a constructive proof from \url{https://math.stackexchange.com/questions/252367/insightful-proofs-for-sherman-morrison-formula-and-matrix-determinant-lemma}. Say you want to solve for $x$
 \begin{align}
 	(A + uv^T) x & =  y\\
 	x & = A^{-1} y - A^{-1} u v^T x
