--- a/notes/training.tex
+++ b/notes/training.tex
@@ -1,5 +1,5 @@
 \section{PyTorch 101}
-I have a PyTorch tutorial in 
+I have a PyTorch tutorial in \url{https://github.com/clarkmiyamoto/PHYS-GA-2033-Spring2026/tree/main/code/PyTorch\%20Tutorial}. If that link dies, it's in my repo and in the code folder.
 
 
 \section{Tricks for Training Neural Networks}
